--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - docker build -t pratish420/multi-nginx ./nginx
   - docker build -t pratish420/multi-server ./server
   - docker build -t pratish420/multi-worker ./worker
-  # Log in to the docker CLI
+  # Log in to the docker CLI -- change = hide passwords
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
   - docker push pratish420/multi-client
